despatma/tests/fail/visitor/double_options_attr.stderr
error: expected identifier
  --> $DIR/double_options_attr.rs:14:5
   |
14 |     #[no_default]
   |     ^

warning: unused imports: `Circle`, `Cube`, `Rectangle`
 --> $DIR/double_options_attr.rs:5:19
  |
5 | use lib::shapes::{Circle, Cube, Rectangle};
  |                   ^^^^^^  ^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
